<resources>
    <string name="app_name">MoR 2019</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MASTERS OF ROCK 2019</string>
    <string name="nav_header_subtitle">Vizovice</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="drawerProgram">Schedule</string>
    <string name="menuTitleOthers">Others</string>
    <string name="menuTitleProgram">Schedule</string>
    <string name="drawerAbout">About</string>

    <string name="drawerCtvrtek">Thursday (11.7.2019)</string>
    <string name="ctvrtekTitle">Thursday - RJD stage</string>
    <string name="ctvrtek2Title">Thursday - FWC stage</string>
    <string name="ctvrtek3Title">Thursday - M&amp;G stage</string>

    <string name="drawerPatek">Friday (12.7.2019)</string>
    <string name="patekTitle">Friday - RJD stage</string>
    <string name="patek2Title">Friday - FWC stage</string>
    <string name="patek3Title">Friday - M&amp;G stage</string>

    <string name="drawerSobota">Saturday (13.7.2019)</string>
    <string name="sobotaTitle">Saturday - RJD stage</string>
    <string name="sobota2Title">Saturday - FWC stage</string>
    <string name="sobota3Title">Saturday - M&amp;G stage</string>

    <string name="drawerNedele">Sunday (14.7.2019)</string>
    <string name="nedeleTitle">Sunday - RJD stage</string>
    <string name="nedele2Title">Sunday - FWC stage</string>
    <string name="nedele3Title">Sunday - M&amp;G stage</string>

    <string name="aboutPopis">Masters Of Rock 2019 - v1.1</string>
    <string name="aboutAutor">Author: Tomáš podolský</string>
    <string name="aboutMail">podolsky.tomas@gmail.com</string>
    <string name="aboutQr">QR code with link to app for your friends. \n Download and install highest version.</string>

</resources>
