<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/program"
        android:title="Program">
        <menu>
            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/drawerCtvrtek"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/drawerCtvrtek" />
                <item
                    android:id="@+id/drawerPatek"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/drawerPatek" />
                <item
                    android:id="@+id/drawerSobota"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/drawerSobota" />
                <item
                    android:id="@+id/drawerNedele"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/drawerNedele" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/ostatni">
        <menu>
            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/drawerAbout"
                    android:icon="@android:drawable/ic_menu_info_details"
                    android:title="@string/drawerAbout" />
            </group>
        </menu>
    </item>


</menu>
